# guardint-survey

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  analysis.ipynb  explorer.py  generate_corr_matrices.py  generate_profiles.py  profile.yml  pyproject.toml  requirements.txt  scratchpad.ipynb
.github/workflows/: deploy.yml  publish-container.yml
.streamlit/: config.toml
data/: all.csv  all.pkl  all.xlsx  cs_de.lss  cs_de_long.csv  cs_fr_long.csv  cs_fr_short.csv  cs_uk_long.csv  cs_uk_short.csv  csv_cs_de.csv  guarding_survey.xlsx  guardint_survey.csv  guardint_survey.pkl  guardint_survey.xlsx  ms_de_long.csv  ms_fr_long.csv  ms_fr_short.csv  ms_uk_long.csv  ms_uk_short.csv  responses.csv
data/corr_sig/: civsoc_corr.csv  civsoc_corr.pkl  civsoc_corr.xlsx  civsoc_sig.csv  civsoc_sig.pkl  civsoc_sig.xlsx  media_corr.csv  media_corr.pkl  media_corr.xlsx  media_sig.csv  media_sig.pkl  media_sig.xlsx  merged_corr.csv  merged_corr.pkl  merged_corr.xlsx  merged_sig.csv  merged_sig.pkl  merged_sig.xlsx
explorer/: Dockerfile  Pipfile  all.py  app.py  civsoc.py  config.tmpl  media.py  merged.py  scratchpad.ipynb
explorer/.ipynb_checkpoints/: scratchpad-checkpoint.ipynb
explorer/api/: download.py
explorer/lib/: download.py  figures.py
explorer/markdown/: media.md  merged.md
legacy/: civsoc.py
profiles/: all.html  media.html  merged.html  profile_all.yml  profile_civsoc.yml
scripts/: clean.py  clean_merged.py  generate_corr_sig_matrices.py  get_survey_data.py
